# DjangoMQDemo

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  Makefile  README.md  api.http  compose.yaml  pyproject.toml  python-django-setup-guide.md
config/: celery.py  frontend.py  health.py  urls.py
config/settings/: base.py  local.py  test.py
integrations/: client.py  factories.py  mock_partner.py  models.py  serializers.py  tasks.py  views.py  webhooks.py
integrations/migrations/: 0001_initial.py
orders/: admin.py  factories.py  models.py  serializers.py  services.py  views.py
orders/migrations/: 0001_initial.py
templates/: index.html
tests/: conftest.py  test_query_counts.py
tests/integrations/: test_client.py  test_tasks.py  test_webhooks.py
tests/orders/: test_api.py  test_services.py
